sumo/tests/traci/VariableRetrieval/VehicleType/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 165 255 dummy
simstep 6 1
